--- a/cms/Dockerfile.development
+++ b/cms/Dockerfile.development
@@ -5,16 +5,13 @@ FROM node:22-alpine AS base
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git
 
 FROM base AS deps
-RUN apk add --no-cache libc6-compat
 
 WORKDIR /cms
-
 COPY package.json package-lock.json ./
-ENV NODE_ENV=development
-RUN npm i -g node-gyp
-RUN npm config set fetch-retry-maxtimeout 600000 -g && npm i
+RUN npm i
 
 FROM base AS runner
+RUN apk add --no-cache curl
 WORKDIR /cms
 
 ENV NODE_ENV=development
@@ -22,9 +19,4 @@ ENV NODE_ENV=development
 COPY --from=deps /cms/node_modules ./node_modules
 COPY . .
 
-RUN npm run build
-
-EXPOSE 1337
-ENV PORT=1337
-
-CMD HOSTNAME="0.0.0.0" npm run dev
+CMD ["npm", "run", "dev"]
