--- a/app/Dockerfile.development
+++ b/app/Dockerfile.development
@@ -1,17 +1,13 @@
-# syntax=docker.io/docker/dockerfile:1
+FROM node:22-alpine
+RUN apk add rsync
 
-FROM node:22-alpine AS base
+ENV NODE_ENV=development
 
-FROM base AS deps
-WORKDIR /app
+WORKDIR /node_cache/app
 COPY package.json package-lock.json* .npmrc* ./
 RUN npm i
 
-FROM base AS runner
 WORKDIR /app
-ENV NODE_ENV=development
-COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-CMD ["npm", "run", "dev"]
-# RUN npm run dev
 
+# No RUN because in dev, docker-compose's command is used instead
