--- a/cms/Dockerfile.development
+++ b/cms/Dockerfile.development
@@ -1,22 +1,15 @@
-# syntax=docker.io/docker/dockerfile:1
-
 FROM node:22-alpine AS base
-
-RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git
-
-FROM base AS deps
-
-WORKDIR /cms
-COPY package.json package-lock.json ./
-RUN npm i
+RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev nasm bash vips-dev git rsync
 
 FROM base AS runner
-RUN apk add --no-cache curl
-WORKDIR /cms
-
 ENV NODE_ENV=development
 
-COPY --from=deps /cms/node_modules ./node_modules
+WORKDIR /node_cache/cms
+COPY package.json package-lock.json* .npmrc* ./
+RUN npm i
+
+RUN apk add --no-cache curl
+WORKDIR /cms
 COPY . .
 
-CMD ["npm", "run", "dev"]
+# No RUN due to docker-compose command
