--- a/docker/docker-compose.development.yaml
+++ b/docker/docker-compose.development.yaml
@@ -37,6 +37,7 @@ services:
     ports:
       - "3121:1337"
     working_dir: /cms
+    command: sh -cx "rsync -ar /node_cache/cms/node_modules/. /cms/node_modules/ && npm run dev"
     volumes:
       - ../cms:/cms/
     depends_on:
