--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
