--- a/docker/docker-compose.development.yaml
+++ b/docker/docker-compose.development.yaml
@@ -19,6 +19,7 @@ services:
     environment:
       HOST: 0.0.0.0
       PORT: 3000
+      LOCAL: true
     depends_on:
       cms:
         condition: service_healthy
